@@ -5,6 +5,7 @@ ChangeLog
 
 SVN TRUNK
 
+- Exclusive element sounding group setting added (eg. hi-hats).
 - Parameters A/B comparison toggle buttons have been added.
 - Keep LV2 event buffer valid on each run(), as found for strict
   LV2 specification and compliance (as suggested by falkTX).
